<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_str"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/reader_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/reader_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/reader_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text"></EditText>

    <TextView
        android:id="@+id/sex_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/sex_str"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/sex_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text">

        <RadioButton
            android:id="@+id/male_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/male_str"></RadioButton>

        <RadioButton
            android:id="@+id/female_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/female_str"></RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/borrowTime_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/borrowTime_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reader_text" />

    <EditText
        android:id="@+id/time_editText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/borrowTime_text"
        app:layout_constraintTop_toBottomOf="@+id/editText"></EditText>

    <TextView
        android:id="@+id/returnTime_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/returnTime_Str"
        app:layout_constraintStart_toEndOf="@+id/time_editText"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/returnTime_text1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="2016-06-30"
        app:layout_constraintStart_toEndOf="@+id/returnTime_text"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/hobby_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hobby_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borrowTime_text" />

    <CheckBox
        android:id="@+id/checkBox_history"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/checkBoxhistory_str"
        app:layout_constraintStart_toEndOf="@+id/hobby_text"
        app:layout_constraintTop_toBottomOf="@+id/time_editText" />

    <CheckBox
        android:id="@+id/checkBox_mystery"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/checkBoxmystery_srt"
        app:layout_constraintStart_toEndOf="@+id/checkBox_history"
        app:layout_constraintTop_toBottomOf="@+id/returnTime_text" />

    <CheckBox
        android:id="@+id/checkBox_literary"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/checkBoxliterary_str"
        app:layout_constraintStart_toEndOf="@+id/checkBox_mystery"
        app:layout_constraintTop_toBottomOf="@+id/returnTime_text1" />

    <TextView
        android:id="@+id/age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/age_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobby_text" />

    <TextView
        android:id="@+id/minAge_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="18"
        app:layout_constraintStart_toEndOf="@+id/age_text"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_history" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="134dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@+id/minAge_text"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_mystery" />

    <TextView
        android:id="@+id/maxAge_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="100"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_literary" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_text" />

    <TextView
        android:id="@+id/bookName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/bookName_str"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/bookType_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/bookType_str"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/bookName_text" />

    <TextView
        android:id="@+id/useAge_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/useAge_str"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/bookType_text" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/searchBtn_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nextBtn_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useAge_text" />

    <TextView
        android:id="@+id/count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="dsd"
        app:layout_constraintStart_toEndOf="@+id/search_btn"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>